# sbom-generator

./: Cargo.toml  build.rs
misc/: compare-sboms.sh
resources/cargo/: Cargo.toml
resources/maven/hierarchy/subproject/: pom.xml
resources/npm/: package.json
resources/py/: requirements.txt
src/: lib.rs  main.rs  report.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/analyze/: producers.rs  sbom_generate.rs
src/analyze/producers/: cargo_producer.rs  dynamic.rs  dynamic_producer.rs  maven.rs  npm_lock_producer.rs  npm_producer.rs  pypi_producer.rs
src/analyze/producers/dynamic/: cargo_dynamic.rs  npm_dynamic.rs  pypi_dynamic.rs
src/analyze/producers/maven/: cli_driver.rs  maven_file.rs  maven_producer.rs
src/model/: configuration.rs  dependency.rs  position.rs
src/sbom/: generate.rs
src/utils/: file_utils.rs  license_guard.rs
ui/: index.html
