[package]
name = "sbom-generator"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
    "prepush-hook",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]

[dependencies]
anyhow = "1.0.89"
bstr = "1.9.1"
derive_builder = "0.20.1"
getopts = "0.2.21"
regex = "1.11.0"
reqwest = { version = "0.12.7" , features = ["blocking"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde-cyclonedx = "0.9.1"
tree-sitter = "0.23.0"
walkdir = "2.5.0"
lazy_static = "1.5.0"
toml = "0.8"
cargo_metadata = "0.23.1"
tracing = "0.1.44"
packageurl = "0.3.0"
chrono = "0.4"
tauri-plugin-dialog = "2.7.1"

[build-dependencies]
cc = "1.1.5"
