[package]
name = "test-cargo"
version = "0.1.0"

[dependencies]
regex = "1.10.0"
rand = "0.8.5"

serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full", "rt-multi-thread"] }
[dev-dependencies]
criterion = "0.5.1"
[target.'cfg(unix)'.dependencies]
libc = "0.2"
[build-dependencies]
cc = "1.0.79"
pkg-config = { version = "0.3.27", optional = true }
my-workspace-lib = { workspace = true }